[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprite/Moving/Squid.png" type="Texture" id=1]
[ext_resource path="res://Element/Mobs/squid.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprite/Static/Ink.png" type="Texture" id=3]
[ext_resource path="res://Element/Mobs/mob_material.tres" type="PhysicsMaterial" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=2]
height = 9.7337

[node name="Squid" type="RigidBody2D" groups=[
"killable-mobs",
]]
mode = 2
physics_material_override = ExtResource( 4 )
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 1 )
hframes = 4
script = ExtResource( 2 )

[node name="BumperDetect" type="Area2D" parent="CollisionShape2D/Sprite"]

[node name="BumpShape" type="CollisionShape2D" parent="CollisionShape2D/Sprite/BumperDetect"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionShape2D/Sprite"]

[node name="CPUParticles2D" type="CPUParticles2D" parent="CollisionShape2D/Sprite"]
position = Vector2( 0, 7 )
emitting = false
amount = 10
one_shot = true
texture = ExtResource( 3 )
direction = Vector2( 0, 1 )
spread = 90.0
gravity = Vector2( 0, 10 )
initial_velocity = 10.0
angle = -90.0

[node name="Timer" type="Timer" parent="CollisionShape2D/Sprite"]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="CollisionShape2D/Sprite/BumperDetect" to="CollisionShape2D/Sprite" method="_on_BumperDetect_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/Sprite/BumperDetect" to="CollisionShape2D/Sprite" method="_on_BumperDetect_body_exited"]
[connection signal="animation_finished" from="CollisionShape2D/Sprite/AnimationPlayer" to="CollisionShape2D/Sprite" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="CollisionShape2D/Sprite/Timer" to="CollisionShape2D/Sprite" method="_on_Timer_timeout"]
